# Distributed_Coverage_Network

./: PresentazioneLaurea.pptx  README.md
Documentation/html/: annotated.html  classagent0___o_l_d_1_1_position_service-members.html  classagent0___o_l_d_1_1_position_service.html  classagent0___o_l_d_1_1_position_service__inherit__graph.map  classagent0___o_l_d_1_1_position_service__inherit__graph.md5  classagent1___o_l_d_1_1_minimal_client_async-members.html  classagent1___o_l_d_1_1_minimal_client_async.html  classagent1___o_l_d_1_1_minimal_client_async__coll__graph.md5  classagent1___o_l_d_1_1_minimal_client_async__inherit__graph.map  (+219 more)
agent_interfaces/: CMakeLists.txt  package.xml
agents_pos_service/: package.xml  setup.cfg  setup.py
interfaces/: CMakeLists.txt  package.xml
robots_control/: CMakeLists.txt  package.xml
robots_control/launch/: start0.launch.py  start1.launch.py  start2.launch.py
robots_control/models/: iris1.sdf  iris2.sdf  iris3.sdf  testrover1.sdf
robots_control/models/Terrain/: model.config  model.sdf
robots_control/models/Terrain/meshes/: large.dae  medium.dae  small.dae  small.stl  small.stl:Zone.Identifier  terrain.dae
robots_control/models/meshes/mir200/visual/: boby_logo.stl
robots_control/src/: control.cpp  control.h
robots_control/src/html/: control_8cpp_source.html  control_8h_source.html  control__vanilla_8cpp_source.html  files.html  index.html
robots_control/src/latex/: control_8cpp_source.tex  control_8h_source.tex  control__vanilla_8cpp_source.tex  files.tex  refman.tex
robots_control/worlds/: myworld.world
(+167 files in other folders)
